--- a/Code/package.json
+++ b/Code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mathician.js",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Mathician but for Javascript/TypeScript!",
   "main": "index.ts",
   "engines": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ArjunSharda/Mathician.git"
+    "url": "git+https://github.com/ArjunSharda/Mathician.js.git"
   },
   "keywords": [
     "mathician.js",
@@ -20,7 +20,7 @@
   "author": "Arjun Sharda",
   "license": "MIT",
   "dependencies": {
-    "mathician.js": "^1.2.5",
+    "mathician.js": "^1.2.6",
     "node-fetch": "^3.2.6"
   },
   "bugs": {
