--- a/Code/package.json
+++ b/Code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mathician.js",
-  "version": "1.2.6",
+  "version": "1.2.7",
   "description": "Mathician but for Javascript/TypeScript!",
   "main": "index.ts",
   "engines": {
@@ -20,13 +20,13 @@
   "author": "Arjun Sharda",
   "license": "MIT",
   "dependencies": {
-    "mathician.js": "^1.2.6",
+    "mathician.js": "^1.2.7",
     "node-fetch": "^3.2.6"
   },
   "bugs": {
-    "url": "https://github.com/ArjunSharda/Mathician/issues"
+    "url": "https://github.com/ArjunSharda/Mathician.js/issues"
   },
-  "homepage": "https://github.com/ArjunSharda/Mathician#readme",
+  "homepage": "https://github.com/ArjunSharda/Mathician.js#readme",
   "scripts": {
     "test": "console.log(mathicianjs.add(5,10));"
   }
